Apply feedback on PR from Erik